--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
           
     
-    <!-- ?<meta http-equiv="refresh" content="0; url=https://faisal-mahmood-developer.github.io/faisalmahmood.github.io/"> -->
+    ?<meta http-equiv="refresh" content="0; url=https://faisal-mahmood-developer.github.io/faisalmahmood.github.io/">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
