google map updateed

--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
         <link rel="me" href="https://www.linkedin.com/in/faisal-mahmood-183111246/" />
         <meta name="google-site-verification" content="_Nx_DD2KZQavP-qFJrOsuKitvCSKecNMOHf6cdW8VrM" />
 
-          
-    
-    ?<meta http-equiv="refresh" content="0; url=https://faisal-mahmood-developer.github.io/faisalmahmood.github.io/">
+    <meta http-equiv="refresh" content="0; url=https://faisal-mahmood-developer.github.io/faisalmahmood.github.io/">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
