--- a/index.html
+++ b/index.html
@@ -2,120 +2,83 @@
 <html lang="en">
 
 <head>
-    <!doctype html>
-    <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description"
-            content="Faisal Mahmood - HR Manager, Full Stack Developer, Web Developer, and Business Solutions Expert. Specializing in talent acquisition, employee management, and web development solutions. Connect for professional opportunities.">
-        <meta name="author" content="Faisal Mahmood - HR Manager">
-        <link rel="canonical" href="https://webportfolioshub.github.io/faisal-mahmood.github.io/">
-        <!-- Open Graph Meta Tags -->
-        <meta property="og:title"
-            content="Faisal Mahmood - HR Manager & Full Stack Web Developer | Connecting Talent & Technology">
-        <meta property="og:description"
-            content="Explore expertise in HR Management and Web Development with Faisal Mahmood. Delivering solutions for talent acquisition, employee management, and business goals. Connect now!">
-        <meta property="og:image"
-            content="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal21.jpg">
-        <meta property="og:url" content="https://webportfolioshub.github.io/faisal-mahmood.github.io/">
-        <meta property="og:type" content="website">
-        <meta property="og:site_name" content="Faisal Mahmood - HR Manager & Web Developer">
-        <!-- Optional Profile Tags (if it's a personal profile) -->
-        <meta property="og:profile:first_name" content="Faisal">
-        <meta property="og:profile:last_name" content="Mahmood">
-        <meta property="og:profile:username" content="faisalmahmood">
-        <!-- Social Media Links -->
-        <meta property="og:see_also" content="https://www.linkedin.com/in/faisal-mahmood-183111246/">
-        <meta property="og:see_also" content="https://www.facebook.com/share/rQVdccvQveFHdQrp/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Faisal Mahmood - HR Manager, Full Stack Developer, Web Developer, and Business Solutions Expert. Specializing in talent acquisition, employee management, and web development solutions. Connect for professional opportunities.">
+    <meta name="author" content="Faisal Mahmood - HR Manager">
+    <link rel="canonical" href="https://webportfolioshub.github.io/faisal-mahmood.github.io/">
     
-        <script type="application/ld+json">
-            {
-              "@context": "https://schema.org",
-              "@type": "Person",
-              "name": "Faisal Mahmood",
-              "jobTitle": "HR Manager & Web Developer",
-              "url": "https://webportfolioshub.github.io/faisal-mahmood.github.io/",
-              "sameAs": [
-                "https://www.linkedin.com/in/faisal-mahmood-183111246/",
-                "https://www.facebook.com/share/rQVdccvQveFHdQrp/"
-              ],
-              "image": [
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.10.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.11.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.3.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.4.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.5.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.6.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.7.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.8.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.9.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal10.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal11.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal12.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal13.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal14.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal15.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal16.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal17.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal18.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal19.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal20.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal21.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal12.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal22.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal23.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal24.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal25.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal26.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal27.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal28.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal3.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal30.webp",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal31.jpg",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal32.webp",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal33.webp",
-                "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal34.webp"
-              ],
-              "description": "Faisal Mahmood is an experienced HR Manager and Web Developer offering expertise in talent acquisition, employee management, and business solutions."
-            }
-        </script>
-        <link rel="me" href="https://www.linkedin.com/in/faisal-mahmood-183111246/" />
-        <meta name="google-site-verification" content="_Nx_DD2KZQavP-qFJrOsuKitvCSKecNMOHf6cdW8VrM" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title"
+        content="Faisal Mahmood - HR Manager & Full Stack Web Developer | Connecting Talent & Technology">
+    <meta property="og:description"
+        content="Explore expertise in HR Management and Web Development with Faisal Mahmood. Delivering solutions for talent acquisition, employee management, and business goals. Connect now!">
+    <meta property="og:image" content="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal21.jpg">
+    <meta property="og:url" content="https://webportfolioshub.github.io/faisal-mahmood.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Faisal Mahmood - HR Manager & Web Developer">
+    <meta property="og:profile:first_name" content="Faisal">
+    <meta property="og:profile:last_name" content="Mahmood">
+    <meta property="og:profile:username" content="faisalmahmood">
+    <meta property="og:see_also" content="https://www.linkedin.com/in/faisal-mahmood-183111246/">
+    <meta property="og:see_also" content="https://www.facebook.com/share/rQVdccvQveFHdQrp/">
 
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Faisal Mahmood",
+          "jobTitle": "HR Manager & Web Developer",
+          "url": "https://webportfolioshub.github.io/faisal-mahmood.github.io/",
+          "sameAs": [
+            "https://www.linkedin.com/in/faisal-mahmood-183111246/",
+            "https://www.facebook.com/share/rQVdccvQveFHdQrp/"
+          ],
+          "image": "https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal21.jpg",
+          "description": "Faisal Mahmood is an experienced HR Manager and Web Developer offering expertise in talent acquisition, employee management, and business solutions."
+        }
+    </script>
+
+    <meta name="google-site-verification" content="_Nx_DD2KZQavP-qFJrOsuKitvCSKecNMOHf6cdW8VrM" />
     <meta http-equiv="refresh" content="0; url=https://faisal-mahmood-developer.github.io/faisalmahmood.github.io/">
-    <!-- Latest compiled and minified CSS -->
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Images</title>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0QJSFCBB1D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-0QJSFCBB1D');
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PDS8ZBJJ');</script>
-    <!-- End Google Tag Manager -->
-    </head>
-    <body>
-        <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PDS8ZBJJ"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-   
+    <title>Faisal Mahmood - HR Manager and Web Developer</title>
 
-    <div class="container">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0QJSFCBB1D"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-0QJSFCBB1D');
+    </script>
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PDS8ZBJJ');
+    </script>
+</head>
+
+<body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PDS8ZBJJ"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+
+    <!-- Image Grid -->
+    <div class="container my-5">
         <div class="row">
             <div class="col-md-4">
                 <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal.10.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
@@ -181,9 +144,6 @@
                 <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal21.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
             </div>
             <div class="col-md-4">
-                <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal12.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
-            </div>
-            <div class="col-md-4">
                 <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal22.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
             </div>
             <div class="col-md-4">
@@ -205,9 +165,6 @@
                 <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal28.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
             </div>
             <div class="col-md-4">
-                <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal3.jpg" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
-            </div>
-            <div class="col-md-4">
                 <img src="https://webportfolioshub.github.io/faisal-mahmood.github.io/faisal30.webp" class="img-fluid" alt="Faisal Mahmood - HR Manager and Web Developer">
             </div>
             <div class="col-md-4">
@@ -224,7 +181,6 @@
             </div>
         </div>
     </div>
-    
 </body>
 
 </html>
